--- a/index.html
+++ b/index.html
@@ -13,3 +13,18 @@
     href="style.css"
     />
         </head>
+<body>
+    <div>
+        <h1> The life of</h1>
+        <h2><a target="_blank"
+            href="https://music.yandex.ru/album/7345932/track/52249515">coder</a></h2>
+        <img
+             src="https://pictures.s3.yandex.net/frontend-developer/free-course/mountains.jpg"
+        alt="черно-белая фотография гор в тумане"
+    
+        />
+        <h3>2022 Liza G.</h3>
+    </div>
+<p>Плейлист для беспечного занятия кодингом.</p>
+    </body>
+</html>
